k8s_project1/backend/server-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: development
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: server
  template: 
    metadata:
      name: server
      namespace: development
      labels:
        app: server
    spec:
      containers:
      - name: barterbrain-backend
        image: aryanmore33/backend-app:latest
        ports:
        - containerPort: 3000
