k8s_project1/backend/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: development
spec:
  selector:
    app.kubernetes.io/name: server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9376

    - name: https
      protocol: TCP
      port: 443
      targetPort: 9377

    - name: api
      protocol: TCP
      port: 3000
      targetPort: 3000
